# ESPN_Extractor

./: .gitignore  .pylintrc  README.md  main.py  main_draft_data.py  main_league_data.py  pyproject.toml  sample.config.py  testing_config.py
.github/workflows/: python-app.yml
espn_extractor/: csv_to_json.py  draft_board.py  draft_board_excel.py  extract.py  league_history.py
espn_extractor/data/: draft.xlsx
espn_extractor/utils/: tools.py
tests/: common_test.py  test_csv_extration.py  test_draft_board_csv.py  test_league_history_csv.py  test_league_history_pipe.py  test_pipe_extration.py
tests/configs/: csv_test_config.py  pipe_test_config.py
tests/results/: draft_board.csv  league_history.csv  test_csv_file.csv
