[tool.poetry]
name = "espn_extractor"
version = "0.5.2"
description = ""
authors = ["Extract ESPN Fantasy Data into CSV and more"]
readme = "README.md"
packages = [{include = "espn_extractor"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
espn-api = "^0.30.0"
colorama = "^0.4.6"
pylint = "^2.17.4"
bandit = "^1.7.5"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
panda = "^0.3.1"
argparse = "^1.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"